优化strategies
