# src/modules/strategies/close-auction/dto/evaluate-by-symbol.dto.ts
@@ -1,0 +1,4 @@
+export class EvaluateBySymbolDto {
+  symbol: string;
+  market?: number;
+}
