# src/modules/strategies/rule-trend/dto/evaluate-rule-trend.dto.ts
@@ -1,0 +1,7 @@
+export class EvaluateRuleTrendDto {
+  code: string;
+}
+
+export class EvaluateRuleTrendBatchDto {
+  codes: string[];
+}
